--- a/Fatos.html
+++ b/Fatos.html
@@ -18,7 +18,14 @@
     <p></p>
 
     <h1>Recomendação de video</h1>
-    <video src="https://www.youtube.com/watch?v=nFyaJqFIsuw">
+    <p style="text-align: center;"><iframe width="50%" height="400" src="https://www.youtube.com/embed/nFyaJqFIsuw" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+    
+    <footer>Alessandro Kennedy Soares Ribeiro<br>
+    <a style="font-size: 100%" href="Referências.html">Referências</a></footer>
 
 </body>
+
+
+
+    
 </html>
