--- a/Memes.html
+++ b/Memes.html
@@ -19,5 +19,8 @@
     <table border="1" bgcolor="#474646" cellspacing="0%"width="100%">
         <td><img src="Imagens\Familia Capivara.jpg"></td>
     </table>
+
+    <footer>Alessandro Kennedy Soares Ribeiro<br>
+    <a style="font-size: 100%" href="Referências.html">Referências</a></footer>
 </body>
 </html>
