--- a/Informações.html
+++ b/Informações.html
@@ -71,6 +71,7 @@
     e nas margens dos rios. Esses roedores se comunicam entre si por vocalizações. Quando há perigo, emitem um som de alarme semelhante ao latido de um cachorro.</p>
 
     <footer>Alessandro Kennedy Soares Ribeiro<br>
-    <a style="font-size: 100%" href="Referências.html">Referências</a></footer>
+    <a style="text-align: center; font-size: 100%; color: rgb(0, 255, 13); font-family: arial; text-underline-offset: 5000000000000px; padding-left: 0%;" href="Referências.html">Referências</a></footer>
+    
 </body>
 </html>
