--- a/Fatos.html
+++ b/Fatos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<ead>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -15,17 +15,20 @@
     <header>Fatos</header>
 
     <h1>Capivaras são peixes?</h1>
-    <p></p>
+    <p style="text-indent: 1%;">&nbsp;&nbsp;&nbsp;As capivaras são os maiores roedores do mundo. Nativos da América do Sul, esses animais são herbívoros e desenvolveram uma forte relação com a água, local de esconderijo dos predadores
+    e meio usado para  a reprodução.
+    Esses roedores têm membranas entre os dedos que os ajudam no nado.
+    No entanto, o que muitos não sabem é que as capivaras foram consideradas peixes durante bastante tempo pelo Vaticano.<br>&nbsp;&nbsp;&nbsp;Segundo o portal IFLScience, os roedores foram classificados assim a partir de 1784 para que
+    os cristãos pudessem se alimentar desses animais na Quaresma.
+    Esse período, na tradição cristã, antecede a Páscoa e o consumo de carne vermelha e de frango é proibido, sendo comum a substituição por peixe na Sexta-feira Santa.<br>&nbsp;&nbsp;&nbsp;Os castores também foram classificados como peixes.
+    "Embora a maioria das pessoas hoje em dia pense que a restrição é sobre comer carne, a restrição alimentar não era sobre mamíferos e pássaros versus peixes, mas sobre terra versus água. Assim, outros animais que passavam
+    o tempo na água eram qualificados como aquáticos e podiam ser comidos na Quaresma", explicou a historiadora Dolly Jorgensen, no blog pessoal homônimo.</p>
 
     <h1>Recomendação de video</h1>
-    <p style="text-align: center;"><iframe width="50%" height="400" src="https://www.youtube.com/embed/nFyaJqFIsuw" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+    <p style="padding-left: 0%;padding-right: 0%; text-indent: 0%; text-align: center;"><iframe width="50%" height="500cm" src="https://www.youtube.com/embed/nFyaJqFIsuw" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
     
     <footer>Alessandro Kennedy Soares Ribeiro<br>
-    <a style="font-size: 100%" href="Referências.html">Referências</a></footer>
+    <a style="text-align: center; font-size: 100%; color: rgb(0, 255, 13); font-family: arial; text-underline-offset: 5000000000000px; padding-left: 0%;" href="Referências.html">Referências</a></footer>
 
 </body>
-
-
-
-    
 </html>
