--- a/Fatos.html
+++ b/Fatos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUY5ohXRaNB8ezKx-eeGYxChmfYULANAfzLeFj2A3Eyk4KCgv6jvyNnnzogVMLJ8JQxR0&usqp=CAU" widght="30px" height="30px"/>
+    <link rel="icon" type="image/png" href="Imagens\Logo Do Site.png" widght="30px" height="30px"/>
     <link rel="stylesheet" href="styles.css">
     
     <title>Kπvara</title>
