--- a/Capivara.html
+++ b/Capivara.html
@@ -14,6 +14,21 @@
 
 <body>
 
+
+    <header>
+        <ul class="menu">
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="Informações.html">Informações</a></li>
+            <li><a href="Fatos.html">Fatos</a></li>
+            <li><a href="Memes.html">Memes</a></li>
+        </ul>
+        
+        <button class="hamburger">
+            <i class="menuIcon material-icons">&#9776</i>
+            <i class="closeIcon material-icons"><=</i>
+        </button>
+    </header>
+
     <audio controls autoplay loop src="Áudio\SaveTube.App - Capybara - Capybara TikTok Song (128 kbps).mp3" style="width: 100%;"></audio>
 
     <marquee>
@@ -101,5 +116,5 @@
     </marquee>
 
 </body>
-
+<script src="script.js"></script>
 </html>
