--- a/Fatos.html
+++ b/Fatos.html
@@ -15,7 +15,19 @@
 <body>
 
     <header>Fatos</header>
-
+    <header>
+        <ul class="menu">
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="Informações.html">Informações</a></li>
+            <li><a href="Fatos.html">Fatos</a></li>
+            <li><a href="Memes.html">Memes</a></li>
+        </ul>
+        
+        <button class="hamburger">
+            <i class="menuIcon material-icons">&#9776</i>
+            <i class="closeIcon material-icons"><=</i>
+        </button>
+    </header>
         <h1>Capivaras são peixes?</h1>
             <p style="text-indent: 1%;">&nbsp;&nbsp;&nbsp;As capivaras são os maiores roedores do mundo. Nativos da América do Sul, esses animais são herbívoros e desenvolveram uma forte
                 relação com a água, local de esconderijo dos predadores e meio usado para  a reprodução. Esses roedores têm membranas entre os dedos que os ajudam no nado.
@@ -34,5 +46,5 @@
         <a style="text-align: center; font-size: 100%; color: rgb(0, 255, 13); font-family: arial; text-underline-offset: 5000000000000px; padding-left: 0%;" href="Referências.html">Referências</a></footer>
 
 </body>
-
+<script src="script.js"></script>
 </html>
