--- a/Memes.html
+++ b/Memes.html
@@ -31,7 +31,7 @@
     
     <audio controls autoplay loop src="Áudio\SaveTube.App - Don Toliver - After Party (Lyrics) _Okay I pull up hop out at the after party_ (128 kbps).mp3" style="width: 100%"></audio>
 
-    <table border="1" bgcolor="#474646" width="60%">
+    <table border="1" bgcolor="#474646">
         
         <td align="center"><img src="Imagens\Meme1.gif" width="100%"></td>
         <td align="center"><img src="Imagens\Meme2.gif" width="100%"></td>
