--- a/menu.html
+++ b/menu.html
@@ -23,17 +23,20 @@
             <menu class="menu">
                 <!-- Adicionando o evento de clique para redirecionar ao clicar em "Jogar" -->
                 <div class="buttons" onclick="redirectToIndex()">Jogar</div>
-                <div class="buttons" onclick="callOverlay('settings')">Opções</div>
                 <div class="buttons" onclick="callOverlay('credit')">Créditos</div>
             </menu>
         </div>  
-        <div class="copyright"></div>
+        
     </div>
     <div class="imagem1">
-        <img class="imagem1" src="imagens\ovulo.png" alt="Left Image">
+        <img class="imagem1" src="imagens\anticoncepcional.png" alt="Left Image">
     </div>
     <div class= "imagem2">
-        <img src="imagens/esperma.png" alt="Right Image">
+        <img src="imagens/diu.png" alt="Right Image">
+    </div>
+
+    <div class="imagem3">
+        <img class="imagem3" src="imagens\ovulo.png" alt="Left Image">
     </div>
 
 </body>
