--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <audio controls autoplay loop src="SnapInsta.io - Super Mario Bros. Theme Song (128 kbps).mp3" style="width: 0.00001%;"></audio>
+    
     <img id="backgroundImage" src="imagens/fundo.png" style="display: none;">
     <canvas id="gameCanvas" width="1400" height="700"></canvas>
 
