--- a/jogo.html
+++ b/jogo.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio controls autoplay loop src="audio/audio.mp3" id = "music" display = "none" style= "width:0%;"></audio>
-
+    <audio controls autoplay loop src="audio/audio.mp3" style= "width:0%;"></audio>
+    <audio id="audioPlayer" src="audio/audio1.mp3"></audio>
 
   <script>
     const music = document.querySelector('#music')
