--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     function redirectToIndex() {
         window.location.href = 'jogo.html';
     }
-    function redirectTo() {
+    function redirectToHistoria() {
     window.location.href = 'historia.html';
-    window.location.href = 'creditos.html';
+    }
+    function redirectToCreditos(){
+      window.location.href = 'creditos.html';
     }
   </script>
 
@@ -36,8 +38,8 @@
 
         <menu class="menu">
           <div class="buttons" onclick="redirectToIndex()">Jogar</div>
-          <div class="buttons" onclick="redirectTo()">História</div>
-          <div class="buttons" onclick="redirectTo()">Créditos</div>
+          <div class="buttons" onclick="redirectToHistoria()">História</div>
+          <div class="buttons" onclick="redirectToCreditos()">Créditos</div>
         </menu>
 
   </body>
