--- a/jogo.html
+++ b/jogo.html
@@ -23,7 +23,7 @@
 
 <div id="dialogBox">
     
-    <span id="closeButton" onclick="closeDialog()">X</span>
+    <span id="closeButton" onclick="fecharDialogo()">X</span>
     <p id="dialogText"></p>
     <ul id="optionsList"></ul>
     <span id = "timer">Tempo Restante: 20s</span>
