--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="buttons" onclick="redirectToHistoria()">História</div>
           <div class="buttons" onclick="redirectToCreditos()">Créditos</div>
         </menu>
-
+      </div>
 
   </body>
 </html>
