--- a/creditos.html
+++ b/creditos.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="paginas.css">
-    <link rel="icon" type="image/png" href="Imagens\ovulo.png" widght="100px" height="100px"/>
-
-    <title>Ovum Journey's</title>
+    <title>Document</title>
 </head>
 <body>
 
@@ -18,13 +16,13 @@
 
     <div class="close"><button onclick="redirectToIndex()">X</button></div>
     <div id = "container">
-        <P class = "text2">Alessandro Kennedy (Info 1a)</P>
-        <p class="text2">João Gabriel (Info 1b)</p>
-        <p class="text2">Lucas César (Info 1a)</p>
-        <p class="text2">Daniel Henrique (Info 1a)</p>
-        <p class="text2">André Victor (Info 1a)</p>
-        <p class="text2">Leticia Bitencourte (Camb 1b)</p>
-        <p class="text2">Camilly Emanuele (Camb 1b)</p>
+        <P class = "text2">Alessandro Kennedy</P>
+        <p class="text2">João Gabriel</p>
+        <p class="text2">Lucas César</p>
+        <p class="text2">Daniel Henrique</p>
+        <p class="text2">André Victor</p>
+        <p class="text2">Leticia Bitencourte</p>
+        <p class="text2">Camilly Emanuele</p>
 
     </div>
 </body>
