--- a/creditos.html
+++ b/creditos.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="paginas.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <script>
         function redirectToIndex() {
             window.location.href = 'index.html ';
         }
+
+        function redirectToReferencias() {
+            window.location.href = 'referencias.html';
+        }
     </script>
 
     <div class="close"><button onclick="redirectToIndex()">X</button></div>
-    <div id = "container">
-        <P class = "text2">Alessandro Kennedy</P>
+    <div class="close"><button onclick="redirectToReferencias()">Referências</button></div>
+    <div id="container">
+        <P class="text2">Alessandro Kennedy</P>
         <p class="text2">João Gabriel</p>
         <p class="text2">Lucas César</p>
         <p class="text2">Daniel Henrique</p>
@@ -26,4 +33,5 @@
 
     </div>
 </body>
+
 </html>
