--- a/historia.html
+++ b/historia.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="paginas.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <script>
         function redirectToIndex() {
             window.location.href = 'index.html ';
         }
+
+        function redirectToConteudo() {
+            window.location.href = 'conteudo.html';
+        }
     </script>
 
     <div class="close"><button onclick="redirectToIndex()">X</button></div>
-    <div id = "container">
-        <P class = "text">Você é um óvulo que está em uma missao de desbravar o sistema reprodutor feminino, para isso voce pode contar com a ajuda dos nativos do local (Eduardo Costa), porém tambem deve-se tomar cuidado com os obstaculos encotrados no caminho. Diverta-se!</P>
+    <div id="container">
+        <P class="text">Você é um óvulo que está em uma missao de desbravar o sistema reprodutor feminino, para isso voce pode contar com a ajuda dos nativos do local (Eduardo Costa), porém tambem deve-se tomar cuidado com os obstaculos encotrados no caminho. Diverta-se!</P>
     </div>
+
+    <div class="close"><button onclick="redirectToConteudo()">Estude Antes</button></div>
 </body>
+
 </html>
