--- a/historia.html
+++ b/historia.html
@@ -13,6 +13,9 @@
         function redirectToIndex() {
             window.location.href = 'index.html ';
         }
+        function redirectToConteudo() {
+            window.location.href = 'conteudo.html';
+        }
     </script>
 
     <div class="close"><button onclick="redirectToIndex()">X</button></div>
@@ -23,6 +26,11 @@
             porém também deve-se tomar cuidado com os obstáculos <img src="imagens/cano.png" alt="Cano" class="img"/>
             e perigos <img src="imagens/diu.png" alt="Diu" class="img1"/> encotrados no caminho. Diverta-se!</P>
     </div>
-
+    
+    <div class="menuContainer">
+        <div class="centerContainer">
+            <menu class="menu"><div class="buttons" onclick="redirectToConteudo()">Saiba Mais</div>
+        </div>
+    </div>
 </body>
 </html>
